Fixed chmod problem

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "exfriend/overseer",
-  "description": "Task manager for laravel",
+  "description": "Task manager for Laravel",
   "authors": [
     {
       "name": "Exfriend",
