--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
   "require": {
     "php": ">=5.4.0",
     "illuminate/support": "4.2.*",
+    "laravel/laravel": "4.2.*",
     "mtdowling/cron-expression": "~1.0"
   },
   "autoload": {
