--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,15 @@
   "require": {
     "php": ">=5.4.0",
     "illuminate/support": "4.2.*",
-
     "mtdowling/cron-expression": "~1.0"
   },
   "autoload": {
     "psr-0": {
       "Exfriend\\Overseer": "src/"
-    }
+    },
+    "classmap": [
+      "src"
+    ]
   },
   "minimum-stability": "stable"
 }
